# myproject

./: pyproject.toml
myproject/: settings.py  urls.py
myproject/quotes/: apps.py  forms.py  models.py  views.py
myproject/quotes/migrations/: 0001_initial.py
myproject/quotes/static/: style.css
myproject/quotes/static/avif/: ukraine-flag-pixel-art-vector-8-bit-icon-logo_497088-24.avif
myproject/quotes/templates/: add_author.html  add_quote.html  author_detail.html  base.html  home.html  login.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  search_results.html  tag_detail.html  top_tags.html
myproject/utility/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
