[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Dmytro Lyfenko <114363730+Lyfenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
